--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,102 +1,42 @@
-name: fitness_tracker_prototype
-description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+# PROJECT METADATA
+name: fitness_tracker_prototype              # APP NAME
+description: "A new Flutter project."        # SHORT DESCRIPTION
+publish_to: 'none'                           # PRIVATE PROJECT (NOT PUBLISHED TO pub.dev)
+version: 1.0.0+1                             # VERSION FORMAT: major.minor.patch+build
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
-
+# FLUTTER SDK ENVIRONMENT REQUIREMENT
 environment:
-  sdk: ^3.6.0
+  sdk: ^3.6.0                                # REQUIRES FLUTTER SDK VERSION 3.6.0 OR HIGHER
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
+# APP DEPENDENCIES
 dependencies:
+
   flutter:
-    sdk: flutter
+    sdk: flutter                             # CORE FLUTTER SDK
 
-  sqflite: ^2.3.0
-  path: ^1.8.3
+  sqflite: ^2.3.0                            # SQLITE PLUGIN FOR LOCAL DATABASE OPERATIONS
+  path: ^1.8.3                               # HELPS CONSTRUCT PATHS FOR FILE SYSTEM
 
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-  
-  provider: 6.1.2    # LATEST STATE MANAGEMENT PROVIDER
+  hive: ^2.2.3                               # LIGHTWEIGHT, NO-SQL DATABASE (USED FOR SESSION STORAGE)
+  hive_flutter: ^1.1.0                       # HIVE + FLUTTER INTEGRATION FOR WIDGETS
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  provider: 6.1.2                            # STATE MANAGEMENT USING CHANGENOTIFIER
 
-  intl: ^0.18.1
+  cupertino_icons: ^1.0.8                    # ICONS THAT MATCH iOS STYLE (USED IN iOS LOOKING COMPONENTS)
 
-  fl_chart: ^0.63.0
+  intl: ^0.18.1                              # DATE/TIME FORMATTING UTILITIES (E.G., 'Apr 16, 2025 • 3:45 PM')
 
+  fl_chart: ^0.63.0                          # USED TO DISPLAY PIE CHARTS FOR WORKOUT HISTORY VISUALIZATION
 
+# DEVELOPMENT-ONLY DEPENDENCIES
 dev_dependencies:
+
   flutter_test:
-    sdk: flutter
+    sdk: flutter                             # TESTING SUPPORT FOR UNIT/WIDGET TESTS
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^5.0.0                      # CODE STYLE AND BEST PRACTICE LINTING RULES
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
+# FLUTTER-SPECIFIC CONFIGURATION
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
-  uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  uses-material-design: true                 # ENABLES USE OF MATERIAL DESIGN ICONS AND WIDGETS
