--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,5 +38,7 @@ dev_dependencies:
 
 # FLUTTER-SPECIFIC CONFIGURATION
 flutter:
-
   uses-material-design: true                 # ENABLES USE OF MATERIAL DESIGN ICONS AND WIDGETS
+
+  assets:
+    - assets/images/appLogo.png
